--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="VT Hokie Finder"/>
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,37 +14,37 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/usernameRegisterEditText"
+            android:id="@+id/username"
             android:hint="Username"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/passwordRegisterEditText"
+            android:id="@+id/password"
             android:inputType="textWebPassword"
             android:hint="Password"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/passwordConfirmRegisterEditText"
+            android:id="@+id/passwordConfirmation"
             android:inputType="textWebPassword"
             android:hint="Confirm password"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/emailRegisterEditText"
+            android:id="@+id/email"
             android:inputType="textEmailAddress"
             android:hint="Email"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:id="@+id/registerButton"
+            android:id="@+id/register"
             android:text="Register"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:id="@+id/signInTextView"
-            android:text="Already have an account? Sign in here."/>
+            android:id="@+id/backToLogin"
+            android:text="Already have an account? Login here."/>
     </LinearLayout>
 </LinearLayout>
