Add sliding tab navigation. Implement a "Join Circle" feature

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,10 +5,24 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
-    <FrameLayout
+
+    <com.parseapp.vthokiefinder.widgets.SlidingTabLayout
+        android:id="@+id/tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:background="?attr/colorPrimary"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:id="@+id/fragmentContainer">
-    </FrameLayout>
+        android:layout_below="@id/tabs">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar"
+            android:id="@+id/fragmentContainer">
+        </FrameLayout>
+    </android.support.v4.view.ViewPager>
 </RelativeLayout>
