--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -11,6 +11,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:id="@+id/circleName"/>
+            android:id="@+id/username"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
