--- a/app/src/main/res/layout/activity_circle.xml
+++ b/app/src/main/res/layout/activity_circle.xml
@@ -29,12 +29,11 @@
             android:textSize="24sp"
             android:textStyle="bold"/>
         <Button
-            android:id="@+id/joinCircle"
+            android:id="@+id/circleAction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/circleName"
-            android:layout_centerHorizontal="true"
-            android:text="Join"/>
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
