Skip login if user already logged in. Add logout feature

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -6,4 +6,8 @@
         android:icon="@drawable/ic_broadcast"
         android:orderInCategory="100"
         app:showAsAction="always" />
+    <item android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        android:orderInCategory="101"
+        app:showAsAction="never" />
 </menu>
