--- a/app/src/main/res/layout/item_circle.xml
+++ b/app/src/main/res/layout/item_circle.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <RelativeLayout
+    <TextView
+        android:id="@+id/circleName"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/circleName"/>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="Test Circle"
+        android:textSize="18sp" />
+</RelativeLayout>
