--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -6,8 +6,13 @@
         android:icon="@drawable/ic_broadcast"
         android:orderInCategory="100"
         app:showAsAction="always" />
+    <item android:id="@+id/action_show_circles"
+        android:icon="@drawable/ic_menu"
+        android:title="@string/action_show_circles"
+        android:orderInCategory="101"
+        app:showAsAction="always" />
     <item android:id="@+id/action_logout"
         android:title="@string/action_logout"
-        android:orderInCategory="101"
+        android:orderInCategory="102"
         app:showAsAction="never" />
 </menu>
