--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,7 +37,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginEnd="16dp"
             android:layout_gravity="bottom|end"
-            android:src="@drawable/ic_plus"
+            android:src="@drawable/ic_add_white_48dp"
             app:borderWidth="0dp"
             app:fabSize="normal"/>
     </android.support.design.widget.CoordinatorLayout>
