--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -7,7 +7,7 @@
         android:orderInCategory="100"
         app:showAsAction="always" />
     <item android:id="@+id/action_show_circles"
-        android:icon="@drawable/ic_menu"
+        android:icon="@drawable/ic_menu_white_48dp"
         android:title="@string/action_show_circles"
         android:orderInCategory="101"
         app:showAsAction="always" />
