--- a/app/src/main/res/layout/item_circle_broadcast.xml
+++ b/app/src/main/res/layout/item_circle_broadcast.xml
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <CheckedTextView
-        android:id="@+id/broadcastStatus"
+    <RelativeLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-        android:checked="false"
-        android:text="Test Circle"/>
+        android:layout_margin="6dp"
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/circleName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Circle Name"
+            android:layout_centerVertical="true" />
+
+        <com.franlopez.flipcheckbox.FlipCheckBox
+            android:id="@+id/broadcastStatus"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"
+            app:checked="false"
+            app:showAnimations="true"
+            app:flipAnimationDuration="75"
+            app:showAcceptImage="true" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_below="@+id/content"
+        style="@style/Divider" />
+
+</RelativeLayout>
