--- a/app/src/main/res/layout/item_circle.xml
+++ b/app/src/main/res/layout/item_circle.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground">
 
     <LinearLayout
         android:id="@+id/content"
@@ -37,7 +38,6 @@
 
     <View
         android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
         android:layout_below="@+id/content"
         style="@style/Divider" />
 </RelativeLayout>
