--- a/app/src/main/res/layout/item_my_friend.xml
+++ b/app/src/main/res/layout/item_my_friend.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:id="@+id/content"
@@ -36,19 +37,11 @@
             android:text="Friend"
             android:textSize="18sp" />
 
-        <ImageButton
-            android:id="@+id/remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_remove_white_24dp"/>
     </RelativeLayout>
 
 
     <View
         android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
         android:layout_below="@+id/content"
         style="@style/Divider" />
 </RelativeLayout>
