--- a/app/src/main/res/layout/fragment_circles_list.xml
+++ b/app/src/main/res/layout/fragment_circles_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/circles"
+        android:id="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
