--- a/app/src/main/res/layout/activity_circle_detail.xml
+++ b/app/src/main/res/layout/activity_circle_detail.xml
@@ -55,7 +55,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|right|end"
         app:borderWidth="0dp"
         app:fabSize="normal"/>
 
