--- a/app/src/main/res/layout/activity_circle_detail.xml
+++ b/app/src/main/res/layout/activity_circle_detail.xml
@@ -42,11 +42,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -55,7 +55,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_gravity="bottom|right|end"
+        android:layout_gravity="bottom|end"
         app:borderWidth="0dp"
         app:fabSize="normal"/>
 
