--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,6 @@
     android:fitsSystemWindows="true">
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
@@ -17,29 +16,37 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
                 <include
                     android:id="@+id/toolbar"
                     layout="@layout/toolbar"/>
 
+            </android.support.design.widget.AppBarLayout>
+
             <FrameLayout
-                android:id="@+id/fragmentContainer"
+                android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@id/toolbar"/>
+                android:layout_below="@+id/appbar"/>
 
         </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navigationView"
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/menu_drawer" />
 
     <FrameLayout
-        android:id="@+id/circleSelect"
+        android:id="@+id/broadcast_select"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
