--- a/app/src/main/res/layout/fragment_create_circle.xml
+++ b/app/src/main/res/layout/fragment_create_circle.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/circleIcon"
+        android:id="@+id/circle_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
