--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profileImage"
+        android:id="@+id/avatar"
         android:layout_width="76dp"
         android:layout_height="76dp"
         android:layout_marginLeft="24dp"
@@ -30,8 +30,8 @@
         android:gravity="start"
         android:paddingBottom="4dp"
         android:layout_above="@+id/email"
-        android:layout_alignLeft="@+id/profileImage"
-        android:layout_alignStart="@+id/profileImage" />
+        android:layout_alignLeft="@+id/avatar"
+        android:layout_alignStart="@+id/avatar" />
 
     <TextView
         android:id="@+id/email"
