--- a/app/src/main/res/layout/item_circle.xml
+++ b/app/src/main/res/layout/item_circle.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleIcon"
+            android:id="@+id/icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/fighting_gobblers_medium"
@@ -25,7 +25,7 @@
             app:civ_border_width="2dp" />
 
         <TextView
-            android:id="@+id/circleName"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
