--- a/app/src/main/res/layout/fragment_circle_detail.xml
+++ b/app/src/main/res/layout/fragment_circle_detail.xml
@@ -24,7 +24,7 @@
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/circle_icon"
+                    android:id="@+id/icon"
                     android:layout_width="160dp"
                     android:layout_height="120dp"
                     android:layout_marginBottom="12dp"
