--- a/app/src/main/res/layout/item_broadcast.xml
+++ b/app/src/main/res/layout/item_broadcast.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/circleName"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
