--- a/app/src/main/res/layout/activity_create_circle.xml
+++ b/app/src/main/res/layout/activity_create_circle.xml
@@ -5,21 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar"/>
-
-    </android.support.design.widget.AppBarLayout>
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="12dp"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
