Remove ParseUI-Widget library. Add ability to create communities

--- a/app/src/main/res/layout/fragment_create_circle.xml
+++ b/app/src/main/res/layout/fragment_create_circle.xml
@@ -53,8 +53,25 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="left|start"
                 android:textSize="16sp"
-                android:inputType="textAutoComplete"
+                android:inputType="textCapSentences"
                 android:hint="Description" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/is_community"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Community"/>
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/invite_friends"
